[package]
name = "geodb"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
byteorder = "1"
clap = { version = "4", features = ["derive"] }
crossbeam-channel = "0.5"
fst = "0.4"
memmap2 = "0.9"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-normalization = "0.1"
zip = "0.6"
hashbrown = "0.14"
ahash = "0.8"
smallvec = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
axum = "0.7"
